--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clsx": "^2.1.1",
     "next": "^15.4.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-error-boundary": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
