--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@next/third-parties": "^15.4.4",
     "@remixicon/react": "^4.6.0",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "next": "^15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
